--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -23,7 +23,9 @@ jobs:
         uses: docker/metadata-action@5.0.0
         with:
           images: ${{ github.repository }}
-          tags: type=semver,pattern={{major}}.{{minor}}
+          tags: |
+            type=ref,event=branch
+            type=semver,prefix={{branch}}-,pattern={{major}}.{{minor}}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
