--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: build and push image
-    runs-on: ubuntu:22.04
+    runs-on: ubuntu-22.04
     steps:
       -
         name: checkout
