--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -10,6 +10,8 @@ on:
 
 jobs:
   build:
+    environment:
+      name: ${{ github.ref_name }}
     name: build and push image
     runs-on: ubuntu-22.04
     steps:
@@ -24,9 +26,7 @@ jobs:
         uses: docker/metadata-action@v5.0.0
         with:
           images: ${{ github.repository }}
-          tags: |
-            type=ref,event=branch
-            type=semver,prefix={{branch}}-,pattern={{major}}.{{minor}}
+          tags: type=semver,prefix={{branch}}-,pattern={{major}}.{{minor}}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
