--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -26,7 +26,8 @@ jobs:
         uses: docker/metadata-action@v5.0.0
         with:
           images: ${{ github.repository }}
-          tags: type=semver,prefix={{branch}}-,pattern={{major}}.{{minor}}
+          tags: |
+            type=semver,pattern={{major}}.{{minor}}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
