--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -20,15 +20,15 @@ jobs:
         uses: actions/checkout@v4.1.1
         # with:
         #   repository: ${{ github.repository }}
-      -
-        name: make image tag using Docker meta
-        id: meta
-        uses: docker/metadata-action@v5.0.0
-        with:
-          images: ${{ github.repository }}
-          tags: |
-            type=ref,event=branch
-            type=semver,pattern={{major}}.{{minor}}
+      # -
+      #   name: make image tag using Docker meta
+      #   id: meta
+      #   uses: docker/metadata-action@v5.0.0
+      #   with:
+      #     images: ${{ github.repository }}
+      #     tags: |
+      #       type=ref,event=branch
+      #       type=semver,pattern={{major}}.{{minor}}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -43,8 +43,10 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true  # ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.output.tags }}
-          labels: ${{ steps.meta.output.labels }}
+          tags: ${{ github.repository }}:${{ github.ref_name}}
+          # tags: ${{ secrets.DOCKER_HUB_USERNAME}}/${{  }}:${{ github.ref_name}}
+          # tags: ${{ steps.meta.output.tags }}
+          # labels: ${{ steps.meta.output.labels }}
 
 
 
