--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -20,15 +20,15 @@ jobs:
         uses: actions/checkout@v4.1.1
         # with:
         #   repository: ${{ github.repository }}
-      # -
-      #   name: make image tag using Docker meta
-      #   id: meta
-      #   uses: docker/metadata-action@v5.0.0
-      #   with:
-      #     images: ${{ github.repository }}
-      #     tags: |
-      #       type=ref,event=branch
-      #       type=semver,pattern={{major}}.{{minor}}
+      -
+        name: make image tag using Docker meta
+        id: meta
+        uses: docker/metadata-action@v5.0.0
+        with:
+          images: ${{ github.repository }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{major}}.{{minor}},value=v1.0.0
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
