fix meta output

--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -44,8 +44,8 @@ jobs:
           push: true  # ${{ github.event_name != 'pull_request' }}
           # tags: ${{ github.repository }}:${{ github.ref_name}}
           # tags: ${{ secrets.DOCKER_HUB_USERNAME}}/${{  }}:${{ github.ref_name}}
-          tags: ${{ steps.meta.output.tags }}
-          labels: ${{ steps.meta.output.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
 
 
