--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -28,7 +28,7 @@ jobs:
           images: ${{ github.repository }}
           tags: |
             type=ref,event=branch
-            type=semver,pattern={{major}}.{{minor}},value=v1.0.0
+            type=semver,prefix={{branch}},pattern={{major}}.{{minor}},value=v1.0.0
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
