--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -2,11 +2,17 @@ name: Create and publish Docker Image
 on:
   push:
     branches:
-      - "dev"
+      - dev
   pull_request:
+    types: [closed]
     branches:
-      - "main"
-      - "qa"
+      - main
+      - qa
+  workflow_dispatch:
+    # branches:
+    #   - dev
+    #   - main
+    #   - qa
 
 jobs:
   cancel_previuous_workflows:
